--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "bootstrap": "^3.3.7",
+    "angular-bootstrap-md": "^5.0.5",
+    "bootstrap": "^4.0.0-alpha.6",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "d3": "^4.12.0",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "ng2-cookies": "^1.0.12",
     "rxjs": "^5.5.2",
     "snazzy-info-window": "^1.1.0",
+    "tether": "^1.4.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
