--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "angular-bootstrap-md": "^5.0.5",
+    "angular2-fontawesome": "^0.9.3",
     "bootstrap": "^4.0.0-alpha.6",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
